--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
 pandas
 numpy
 matplotlib
+scikit-learn
+seaborn
+kaggle
+transformers
+datasets
+accelerate
+torch
+tqdm
+jupyter
+ast
+re
+string
+collections
